--- a/BDbetaTemplate/MoreTemplates/BIB/PackagesUsed.bib
+++ b/BDbetaTemplate/MoreTemplates/BIB/PackagesUsed.bib
@@ -9,7 +9,7 @@
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books with R Markdown},
   author = {Yihui Xie},
-  note = {R package version 0.0.64},
+  note = {R package version 0.0.60},
   url = {https://github.com/rstudio/bookdown},
   year = {2016},
 }
@@ -23,22 +23,22 @@
 @Manual{R-ggplot2,
   title = {ggplot2: An Implementation of the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang},
-  year = {2016},
-  note = {R package version 2.1.0},
+  year = {2015},
+  note = {R package version 2.0.0},
   url = {http://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2016},
-  note = {R package version 1.12.22},
-  url = {http://yihui.name/knitr/},
+  note = {R package version 1.12.3},
+  url = {http://CRAN.R-project.org/package=knitr},
 }
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman},
   year = {2016},
-  note = {R package version 0.9.5.9},
+  note = {R package version 0.9.5.8},
   url = {http://rmarkdown.rstudio.com},
 }
 @Manual{R-xtable,
