--- a/Poster/knitr-packages.bib
+++ b/Poster/knitr-packages.bib
@@ -13,6 +13,14 @@
   note = {R package version 1.3-18},
   url = {http://CRAN.R-project.org/package=boot},
 }
+@Manual{R-e1071,
+  title = {e1071: Misc Functions of the Department of Statistics, Probability
+Theory Group (Formerly: E1071), TU Wien},
+  author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
+  year = {2015},
+  note = {R package version 1.6-7},
+  url = {http://CRAN.R-project.org/package=e1071},
+}
 @Manual{R-ggmap,
   title = {ggmap: Spatial Visualization with ggplot2},
   author = {David Kahle and Hadley Wickham},
@@ -23,16 +31,16 @@
 @Manual{R-ggplot2,
   title = {ggplot2: An Implementation of the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang},
-  year = {2016},
-  note = {R package version 2.1.0},
+  year = {2015},
+  note = {R package version 2.0.0},
   url = {http://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2016},
-  note = {R package version 1.12.25},
-  url = {http://yihui.name/knitr/},
+  note = {R package version 1.12.3},
+  url = {http://CRAN.R-project.org/package=knitr},
 }
 @Manual{R-lattice,
   title = {lattice: Trellis Graphics for R},
@@ -48,11 +56,19 @@
   note = {R package version 3.1.0},
   url = {http://CRAN.R-project.org/package=maps},
 }
+@Manual{R-MASS,
+  title = {MASS: Support Functions and Datasets for Venables and Ripley's MASS},
+  author = {Brian Ripley},
+  year = {2015},
+  note = {R package version 7.3-45},
+  url = {http://CRAN.R-project.org/package=MASS},
+}
 @Manual{R-PASWR,
-  title = {PASWR: Probability  and Statistics with R},
+  title = {PASWR: PROBABILITY and STATISTICS WITH R},
   author = {Alan T. Arnholt},
-  year = {2016},
-  note = {R package version 1.2},
+  year = {2012},
+  note = {R package version 1.1},
+  url = {http://CRAN.R-project.org/package=PASWR},
 }
 @Manual{R-randomForest,
   title = {randomForest: Breiman and Cutler's Random Forests for Classification and
